openssl-sys/tongsuo/include/openssl/bio.h

typedef struct bio_method_st BIO_METHOD;
const BIO_METHOD *BIO_s_file(void);
BIO *BIO_new(const BIO_METHOD *type);
void BIO_set_data(BIO *a, void *ptr);
void *BIO_get_data(BIO *a);
void BIO_set_init(BIO *a, int init);
const BIO_METHOD *BIO_s_mem(void);
BIO_METHOD *BIO_meth_new(int type, const char *name);
void BIO_meth_free(BIO_METHOD *biom);
int BIO_meth_set_write(BIO_METHOD *biom,
                       int (*write) (BIO *, const char *, int));
int BIO_meth_set_read(BIO_METHOD *biom,
                      int (*read) (BIO *, char *, int));
int BIO_meth_set_puts(BIO_METHOD *biom,
                      int (*puts) (BIO *, const char *));
int BIO_meth_set_ctrl(BIO_METHOD *biom,
                      long (*ctrl) (BIO *, int, long, void *));
int BIO_meth_set_create(BIO_METHOD *biom, int (*create) (BIO *));
int BIO_meth_set_destroy(BIO_METHOD *biom, int (*destroy) (BIO *));