openssl-sys/tongsuo/include/openssl/x509.h

typedef STACK_OF(X509_ALGOR) X509_ALGORS;
typedef struct X509_name_entry_st X509_NAME_ENTRY;
typedef struct X509_extension_st X509_EXTENSION;
typedef STACK_OF(X509_EXTENSION) X509_EXTENSIONS;
X509_NAME *X509_get_subject_name(const X509 *a);
ASN1_TIME *X509_getm_notBefore(const X509 *x);
int X509_set1_notBefore(X509 *x, const ASN1_TIME *tm);
ASN1_TIME *X509_getm_notAfter(const X509 *x);
int X509_set1_notAfter(X509 *x, const ASN1_TIME *tm);
int X509_up_ref(X509 *x);
const STACK_OF(X509_EXTENSION) *X509_get0_extensions(const X509 *x);
X509_NAME_ENTRY *X509_NAME_get_entry(const X509_NAME *name, int loc);
ASN1_STRING * X509_NAME_ENTRY_get_data(const X509_NAME_ENTRY *ne);
void *X509_get_ext_d2i(const X509 *x, int nid, int *crit, int *idx);